Address PR feedback
Co-authored-by: Juuz <6596629+Juuxel@users.noreply.github.com>